[gd_scene load_steps=2 format=3 uid="uid://cvx2xfql5ar6i"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_yt5x3"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yt5x3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.117647, 0.117647, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 120.0
offset_right = 701.0
offset_bottom = 511.0
alignment = 1

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="WinnerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "FIGHT AGAIN!"

[node name="CharSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CHARACTER SELECT"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU
"
